--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
 /* Reset de Estilos */
+
 * {
     margin: 0;
     padding: 0; 
@@ -6,7 +9,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto Condensed", Arial, sans-serif;
     background-color: #a3a29d;
 }
 
